fix various spacing issues and highlight latest post

--- a/main.scss
+++ b/main.scss
@@ -40,6 +40,10 @@ figure {
 		border: 0;
 	}
 
+	&.tiled-gallery__item {
+		margin: 0 !important;
+	}
+
 	&.wp-block-image {
 		figcaption {
 			margin-top: 4px;
@@ -69,6 +73,7 @@ blockquote {
 	padding: 16px !important;
 	margin: 0 0 24px 0 !important;
 	background-color: #f5f5f5;
+	border-left: 3px solid #3094ff !important;
 
 	p,
 	i,
@@ -323,7 +328,7 @@ header {
 		}
 
 		.title-wrap {
-			background-color: rgba(26, 26, 26, .75) !important;
+			background-color: rgba(26, 26, 26, .85) !important;
 			padding: 35px 0 64px 0;
 			bottom: 0;
 
@@ -544,6 +549,20 @@ body {
 				background-color: white;
 				margin-bottom: 16px;
 				border-radius: 0;
+				position: relative;
+
+				&:nth-child(2) {
+					&::before {
+						content: '';
+						position: absolute;
+						top: -8px;
+						left: -8px;
+						border-radius: 50%;
+						background-color: #3094ff;
+						width: 16px;
+						height: 16px;
+					}
+				}
 
 				.entry-thumbnail {
 					border-radius: 0;
@@ -653,48 +672,48 @@ body {
 			}
 	
 			.entry-content {
-				margin: 0;
+				margin: 0 48px 0 0;
 
 				h1 {
 					font-size: 2.4rem;
 					line-height: 1.6;
 					padding: 0;
-					margin: 0 0 24px 0;
+					margin: 0 0 12px 0;
 				}
 
 				h2 {
 					font-size: 2.2rem;
 					line-height: 1.6;
 					padding: 0;
-					margin: 0 0 24px 0;
+					margin: 0 0 12px 0;
 				}
 
 				h3 {
 					font-size: 2rem;
 					line-height: 1.6;
 					padding: 0;
-					margin: 0 0 24px 0;
+					margin: 0 0 12px 0;
 				}
 
 				h4 {
 					font-size: 1.8rem;
 					line-height: 1.6;
 					padding: 0;
-					margin: 0 0 24px 0;
+					margin: 0 0 12px 0;
 				}
 
 				h5 {
 					font-size: 1.6rem;
 					line-height: 1.6;
 					padding: 0;
-					margin: 0 0 24px 0;
+					margin: 0 0 12px 0;
 				}
 
 				h6 {
 					font-size: 1.4rem;
 					line-height: 1.6;
 					padding: 0;
-					margin: 0 0 24px 0;
+					margin: 0 0 12px 0;
 				}
 
 				p {
@@ -715,6 +734,7 @@ body {
 				}
 
 				img {
+					border: 0;
 					border-radius: 0;
 				}
 
@@ -1077,6 +1097,15 @@ footer {
 				}
 			}
 		}
+
+		.blog-wrap,
+		.singlepost-wrap {
+			.hentry {
+				.entry-content {
+					margin: 0;
+				}
+			}
+		}
 	}
 }
 
@@ -1248,6 +1277,21 @@ footer {
 }
 
 @media screen and (max-width: 575px) {
+	header {
+		&.entry-header {
+			.entry-thumbnail {
+				display: none;
+			}
+
+			.title-wrap {
+				position: relative;
+				background-color: #1A1A1A !important;
+				padding-top: 24px !important;
+				margin-top: 32px;
+			}
+		}
+	}
+
 	body {
 		.featured-content {
 			.featured-slider {
